[gd_scene load_steps=4 format=3 uid="uid://sj5ga6f11ten"]

[ext_resource type="Script" uid="uid://b62xw15kyeii8" path="res://Scenes/UI/ui.gd" id="1_bn11v"]
[ext_resource type="PackedScene" uid="uid://dkq72tu3j8e2o" path="res://Scenes/UI/stickman_slot.tscn" id="2_b8adx"]
[ext_resource type="PackedScene" uid="uid://c1lt44dtk7m7o" path="res://stickman_inventory.tscn" id="2_ii1lt"]

[node name="UI" type="Control" node_paths=PackedStringArray("inventory_node")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
script = ExtResource("1_bn11v")
inventory_node = NodePath("Stickman_Inventory")
Slot_scene = ExtResource("2_b8adx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_direction = 2
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -576.0
offset_top = -100.0
offset_right = 576.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0

[node name="InventoryVBox" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
alignment = 2

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/InventoryVBox"]
custom_minimum_size = Vector2(1000, 75)
layout_mode = 2

[node name="HotbarHBbox" type="HBoxContainer" parent="MarginContainer/InventoryVBox/NinePatchRect"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1000, 75)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -75.0
offset_right = 500.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 15
alignment = 1

[node name="Stickman_Inventory" parent="." instance=ExtResource("2_ii1lt")]
autofill_test_int = 6

[connection signal="inventory_stickman_added" from="Stickman_Inventory" to="." method="_on_stickman_inventory_inventory_stickman_added"]
[connection signal="inventory_stickman_removed" from="Stickman_Inventory" to="." method="_on_stickman_inventory_inventory_stickman_removed"]
